--- a/public/help.html
+++ b/public/help.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Help Page</title>
   </head>
   <body>
-    <h1> Help page </h1>
-    <p> LMAO NIGG </p>
+    <h1>Help Page</h1>
+    <p>Some text here</p>
   </body>
 </html>
